Update named states

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,11 +7,11 @@ button {
 }
 
 table {
-  @apply w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400;
+  @apply w-full text-sm text-left rtl:text-right text-gray-500;
 }
 
 thead {
-  @apply text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400;
+  @apply text-xs text-gray-700 uppercase bg-gray-50;
 }
 
 th,
@@ -20,9 +20,9 @@ td {
 }
 
 tr {
-  @apply bg-white border-b dark:bg-gray-800 dark:border-gray-700;
+  @apply bg-white border-b;
 }
 
 button {
-  @apply text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800 disabled:opacity-50;
+  @apply text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 focus:outline-none  disabled:opacity-50;
 }
