--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <nav class="bg-white border-gray-200 dark:bg-gray-900 mb-4 border-b">
-  <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
+  <div class="container flex flex-wrap items-center justify-between mx-auto py-4">
     <span class="flex items-center space-x-3 rtl:space-x-reverse">
       <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">LOGO</span>
     </span>
