--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,18 @@
-<nav class="bg-white border-gray-200 dark:bg-gray-900 mb-4 border-b">
+<nav class="bg-white border-gray-200 mb-4 border-b">
   <div class="container flex flex-wrap items-center justify-between mx-auto py-4">
     <span class="flex items-center space-x-3 rtl:space-x-reverse">
-      <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">LOGO</span>
+      <a routerLink="/">
+        <span class="self-center text-2xl font-semibold whitespace-nowrap">LOGO</span>
+      </a>
     </span>
     <div class="w-full md:block md:w-auto">
       <ul
-        class="font-medium flex gap-4 p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700"
+        class="font-medium flex gap-4 p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:mt-0 md:border-0 md:bg-white"
       >
         <li>
           <a
             routerLink="single-state"
-            class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-blue-500"
+            class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0"
           >
             Single state
           </a>
@@ -18,7 +20,7 @@
         <li>
           <a
             routerLink="named-states"
-            class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-blue-500"
+            class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0"
           >
             Named states
           </a>
@@ -26,7 +28,7 @@
         <li>
           <a
             routerLink="filterable-table"
-            class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-blue-500"
+            class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0"
           >
             With filter
           </a>
@@ -34,7 +36,7 @@
         <li>
           <a
             routerLink="ui-state"
-            class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-blue-500"
+            class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0"
           >
             UI State
           </a>
