--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,5 +24,5 @@ tr {
 }
 
 button {
-  @apply text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 focus:outline-none  disabled:opacity-50;
+  @apply text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 focus:outline-none  disabled:opacity-50;
 }
