--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,26 @@
-<nav class="bg-white border-gray-200 mb-4 border-b">
+<nav class="bg-white border-gray-200 dark:bg-gray-900">
   <div class="container flex flex-wrap items-center justify-between mx-auto py-4">
     <span class="flex items-center space-x-3 rtl:space-x-reverse">
       <a routerLink="/">
-        <span class="self-center text-2xl font-semibold whitespace-nowrap">LOGO</span>
+        <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">LOGO</span>
       </a>
     </span>
     <div class="w-full md:block md:w-auto">
       <ul
-        class="font-medium flex gap-4 p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:mt-0 md:border-0 md:bg-white"
+        class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700"
       >
         <li>
           <a
+            routerLink="two-states"
+            class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
+          >
+            Two states
+          </a>
+        </li>
+        <li>
+          <a
             routerLink="single-state"
-            class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0"
+            class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
           >
             Single state
           </a>
@@ -20,7 +28,7 @@
         <li>
           <a
             routerLink="named-states"
-            class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0"
+            class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
           >
             Named states
           </a>
@@ -28,7 +36,7 @@
         <li>
           <a
             routerLink="filterable-table"
-            class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0"
+            class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
           >
             With filter
           </a>
@@ -36,7 +44,7 @@
         <li>
           <a
             routerLink="ui-state"
-            class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0"
+            class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
           >
             UI State
           </a>
@@ -46,6 +54,6 @@
   </div>
 </nav>
 
-<div class="container ml-auto mr-auto">
+<div class="ml-auto mr-auto">
   <router-outlet />
 </div>
