--- a/src/app/demos/two-states/two-states.component.html
+++ b/src/app/demos/two-states/two-states.component.html
@@ -1,6 +1,10 @@
 @if (loading()) {
+  <h2 class="text-xl text-center my-4">Loading view</h2>
+
   <app-spinner />
 } @else {
+  <h2 class="text-xl text-center my-4">Data view</h2>
+
   <app-to-dos-table [toDos]="toDos()" />
 
   <button
